Search results now displays correct game covers (from data.js)

--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ button:hover {
     cursor: pointer;
     background-image: url('./img/cover.jpg');
     background-size: cover;
+    background-position: center center;
     min-height: 360px;
     min-width: 240px;
     background-color: rgb(6, 53, 75);
